--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -30,8 +30,8 @@
   <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
   <script type="module" src="/src/main.tsx"></script>
   
-  <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
-  <script src="https://files.bpcontent.cloud/2025/04/01/07/20250401073315-YJIU8WV9.js"></script>
+  <!-- <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+  <script src="https://files.bpcontent.cloud/2025/04/01/07/20250401073315-YJIU8WV9.js"></script> -->
       
 </body>
 
